# nats-presentation

./: index.html
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
poc-example/: .gitignore  .markdownlintignore  Dockerfile  Dockerfile.nats  Makefile  README.md  asyncapi-tools.sh  asyncapi.yaml  docker-compose.yml  gen_pydantic_models.py  nats.conf  pyproject.toml  requirements.txt  websocket-client.html
poc-example/scripts/: profile_cdc.py
poc-example/src/: jetstream_consumer.py  jetstream_publisher.py  models.py  mqtt_publisher.py  mqtt_subscriber.py  postgres_writer.py  publisher.py  publisher_validated.py  raw_jetstream_publisher.py  reply.py  request.py  subjects.py  subscriber.py  subscriber_validated.py  websocket_publisher.py  websocket_subscriber.py
poc-example/tests/: test_contract.py
presentation/: .gitignore  index.html
presentation/custom-theme/: catppuccin-highlight.css  catppuccin-theme.css
