[project]
name = "nats-poc"
version = "0.1.0"
description = "POC for learning NATS and NATS JetStream with Python"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.0",
    "nats-py>=2.9.0",
    "paho-mqtt>=2.1.0",
    "pydantic>=2.0.0",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "datamodel-code-generator>=0.59.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
